--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <title>Service Worker Demo Add To Home Screen</title>
-  <link rel="stylesheet" href="/styles/index.css">
-  <link rel="manifest" href="/scripts/manifest.json">
+  <link rel="stylesheet" href="sw_practice/styles/index.css">
+  <link rel="manifest" href="sw_practice/scripts/manifest.json">
 </head>
 
 <body>
@@ -28,6 +28,6 @@
 </script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-messaging.js"></script>
-  <script src="/scripts/main.js"></script>
+  <script src="sw_practice/scripts/main.js"></script>
 </body>
 </html>
