--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <title>Service Worker Demo Add To Home Screen</title>
+  <title>Service Worker Demo</title>
   <link rel="stylesheet" href="/sw_practice/styles/index.css">
   <link rel="manifest" href="/sw_practice/scripts/manifest.json">
 </head>
@@ -15,7 +15,7 @@
 <body>
 
   <header>
-    <h1>This is demo add to home screen</h1>
+    <h1>This is demo about SW</h1>
   </header>
 
   <main>
