--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 </script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-messaging.js"></script>
-  <script src="/sw_practice/scripts/main.js"></script>
+  <script src="/sw_practice/scripts/main.js" defer></script>
 </body>
 </html>
